--- a/template.html
+++ b/template.html
@@ -12,6 +12,8 @@
           </div>
           <button type="submit" class="btn btn-primary ml-1">Add</button>
         </form>
+
+        <div class="feedback"></div>
       </div>
     </div>
   </body>
