--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Webpack Package</title>
+    <title>RSS reader</title>
   </head>
   <body class="d-flex flex-column h-100">
     <div class="container mt-5">
