--- a/template.html
+++ b/template.html
@@ -12,9 +12,9 @@
           </div>
           <button type="submit" class="btn btn-primary ml-1">Add</button>
         </form>
-
         <div class="feedback"></div>
       </div>
+      <div class="rss-container"></div>
     </div>
   </body>
 </html>
