--- a/template.html
+++ b/template.html
@@ -3,18 +3,37 @@
   <head>
     <title>RSS reader</title>
   </head>
-  <body class="d-flex flex-column h-100">
+  <body class="d-flex flex-column min-vh-100">
     <div class="container mt-5">
       <div class="jumbotron">
+        <h1 class="display-3">RSS Reader</h1>
         <form action="" class="form-inline">
-          <div class="form-group">
-            <input type="text" required name="url" class="form-control" placeholder="rss link">
+          <div class="form-group w-75">
+            <input type="text" required name="url" class="form-control form-control-lg w-100" placeholder="rss link">
           </div>
           <button type="submit" class="btn btn-primary ml-1">Add</button>
         </form>
         <div class="feedback"></div>
       </div>
-      <div class="rss-container"></div>
+      
+      <div class="container-xl rss-container">
+        <div class="row">
+          <div class="feeds"></div>
+        </div>
+        <div class="row">
+          <div class="posts"></div>
+        </div>
+      </div>
+
     </div>
+
+    <footer class="footer border-top py-3 mt-5">
+      <div class="container-xl">
+        <div class="text-center">
+          created by 
+          <a href="https://github.com/fluxet" target="_blank">Fluxet</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
